# WikiScraper

./: README.md  pyproject.toml
src/scraper/: scraper.py
