[tool.poetry]
name = "wikiscraper"
version = "0.1.0"
description = ""
authors = ["Dmitry Buggenhout <dmitry.buggenhout@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
scrape = "src.scraper.scraper:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
